--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 h1{
     font-weight: var(--font-weight-bold);
