--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
     color: var(--white);
     font-family: var(--font);
     font-size: var(--font-size);
-    height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -149,9 +149,9 @@ p{
     font-weight: 600;
     background-color: var(--light-blue);
     color: var(--orange);
-    padding: 0.5rem 0.2rem;
-    border-radius: 40px;
-    margin: 1.8rem 3.7rem;
+    padding: 0.5rem 0;
+    border-radius: 25px;
+    margin: 1.8rem 4rem;
 }
 #container2 > h1{
     margin-bottom: 1rem;
