--- a/styles.css
+++ b/styles.css
@@ -156,8 +156,8 @@ p{
     margin-bottom: 1rem;
 }
 
-/* @media screen and (max-width: 400px){
+@media screen and (max-width: 400px){
     body{
-        height: 85vh;
+        height: 88vh;
     }
-} */
+}
