--- a/styles.css
+++ b/styles.css
@@ -134,11 +134,11 @@ p{
     align-items: center;
     display: none;
 }
-/* 
+
 #thanks-img{
     display: block;
     margin: 0 auto;
-} */
+}
 
 #container2 > *{
     text-align: center;
